src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --color-bkg: 255 179 193;
    --color-content: 52 37 40;
    --color-accent1: 255 143 163;
    --color-accent2: 255 117 143;
    --color-accent3: 255 77 109;
  }

  @media (prefers-color-scheme:dark) {
    :root {
      --color-bkg: 89 13 34;
      --color-content: 255 240 243;
      --color-accent1: 128 15 47;
      --color-accent2: 164 19 60;
      --color-accent3: 201 24 74;
    }
  }
}

html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}
html{
  scroll-behavior: smooth;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

